1999-11-18  Adam Fedor  <fedor@gnu.org>

	* Source/GNUmakefile: Install unicode headers.
	* Source/Makefile.postamble: Script for doing unicode installation.
	(patches from Christopher Seawood <cls@seawood.org>).

Thu Nov 18 15:23:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Headers/Foundation/NSPage.h: removed
	* Headers/Foundation/NSZone.h: incorporated NSPage.h
	* Source/GNUmakefile: Remove reference to NSPage.h
	* Source/NSZone.m: Remove reference to NSPage.h

Sun Nov  7 14:04:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/o_vscanf.c Reverted to earlier version - the last fix was
	causing distributed objects to fail!  I don't know why, but DO seems
	more important than the bugfix - so, pending a rewrite of DO
	encoding/decoding to remove the dependency on the old stream code,
	we need to leave this as it is.

1999-11-09  Adam Fedor  <fedor@gnu.org>

	* Source/o_vscanf.c (o_vscanf): Don't count '\n' as whitespace.

Sun Nov  7 14:04:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/Foundation/NSDebug.h: Added NSWarnLog(), NSWarnFLog() and
	NSWarnMLog() macros to log warnings about potential programming errors.
	* Source/NSArray.m: Change to use NSWarnMLog() for warnings.
	* Source/NSGArray.m: ditto
	* Source/NSGCountedSet.m: ditto
	* Source/NSGDictionary.m: ditto
	* Source/NSGSet.m: ditto

Thu Nov  4 1999  Michael Hanni <mhanni@sprintmail.com>

	* Source/NSObject.m: added FreeBSD specific code in
	initialization so that the FPU is intialized with the correct
	exception flag. This allows NSConnection to work on FreeBSD (gdnc,
	gdomap, gpbs.)

Thu Nov  4 10:52:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSArray.m: use NSLog() to warn about attempts to remove nil.
	* Source/NSGArray.m: ditto
	* Source/NSGCountedSet.m: ditto
	* Source/NSGDictionary.m: ditto
	* Source/NSGSet.m: ditto

Fri Oct 29 10:08:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
